--- a/Paper_Template.tex
+++ b/Paper_Template.tex
@@ -1,8 +1,12 @@
-%
-% Template with ideas from Simon Peyton Jones' "How to Write a Great Research Paper"
-
-% All material for that and related talks can be accessed here: https://www.microsoft.com/en-us/research/people/simonpj/
-%
+%% 
+%% Template with ideas from Simon Peyton Jones' "How to Write 
+%%   a Great Research Paper"
+%%
+%% All material for that and related talks can be accessed here: 
+%%   https://www.microsoft.com/en-us/research/people/simonpj/
+%%
+%% Original file: acl2017.tex
+%% 
 %% Based on the style files for ACL-2015, with some improvements
 %%  taken from the NAACL-2016 style
 %% Based on the style files for ACL-2014, which were, in turn,
@@ -50,7 +54,7 @@
 \begin{document}
 \maketitle
 \begin{abstract}
- The most difficult part of writing a paper is often getting started, especially from a blank slate. In order to get you started writing, we've populated this template not only with section headings, but helpful tidbits from Simon Peyton Jomes' inspirational talk on writing research papers. The full talk can (and \textit{should}) be viewed at \url{https://www.youtube.com/watch?v=g3dkRsTqdDA&t=1618s}.
+ The most difficult part of writing a paper is often getting started, especially from a blank slate. Since writing should be a \textit{part of} research, rather than the result, cnsistent writing is essential to conducting good research. In order to get you started writing, we've populated this template not only with section headings, but helpful tidbits from Simon Peyton Jomes' fantastic talk on writing research papers. The full talk can (and \textit{should}) be viewed at \url{https://www.youtube.com/watch?v=g3dkRsTqdDA&t=1618s}.
 \end{abstract}
 
 \section{General Advice}
