updated template/pdf contact info

--- a/Paper_Template.tex
+++ b/Paper_Template.tex
@@ -41,12 +41,12 @@
 %   Affiliation / Address line 2 \\
 %   Affiliation / Address line 3 \\
 %   {\tt email@domain} \\
-%   \And
-%   Second Author \\
-%   Affiliation / Address line 1 \\
+  \And
+  (Written By) Adam Goodkind \\
+  Northwestern University \\
 %   Affiliation / Address line 2 \\
 %   Affiliation / Address line 3 \\
-%   {\tt email@domain} \\
+%   {\tt a.goodkind@u.northwestern.edu} \\
   }
 
 \date{}
